--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 .dark {
   /* Dark mode colors */
-  --html-page-color: rgb(23, 24, 26);
+  --html-page-color: rgb(37, 39, 42);
   --text-default: hsla(0, 0%, 100%, 0.87);
 
   --background-one: #0a0a0a;
@@ -43,6 +43,6 @@ body {
   min-height: 100vh;
 
   /* shared light and dark colors */
-  --brand-1: orange;
+  --brand-1: rgb(33, 82, 219);
   --shared-color: pink;
 }
