--- a/src/components/projects/styles/projects-display.module.css
+++ b/src/components/projects/styles/projects-display.module.css
@@ -1,6 +1,9 @@
 .projectsContainer {
   background-color: gray;
 
+  width: clamp(260px, 60%, 1200px);
+  margin: 0 auto;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(100px, auto);
