--- a/src/components/projects/projects-overview/styles/projects-display.module.css
+++ b/src/components/projects/projects-overview/styles/projects-display.module.css
@@ -5,12 +5,27 @@
   margin: 0 auto;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  grid-auto-rows: auto;
+  column-gap: 40px;
+  row-gap: 30px;
 }
 
 .project {
   background-color: darkcyan;
   width: 150px;
   height: 150px;
+}
+
+@media (max-width: 1000px) {
+  .projectsContainer {
+    width: clamp(260px, 80%, 500px);
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .project {
+    width: 100%;
+  }
 }
