A very strange fix to a very strange bug. This took so long I almost made my own chart library.

--- a/src/components/projects/projects-overview/styles/project-thumbnail.module.css
+++ b/src/components/projects/projects-overview/styles/project-thumbnail.module.css
@@ -6,3 +6,11 @@
 
   overflow: auto !important;
 }
+
+.hide {
+  background-color: transparent;
+  color: transparent;
+  width: 0px;
+  height: 0px;
+  border: 0px solid transparent;
+}
