--- a/src/components/projects/projects-overview/styles/project-thumbnail.module.css
+++ b/src/components/projects/projects-overview/styles/project-thumbnail.module.css
@@ -14,3 +14,9 @@
   height: 0px;
   border: 0px solid transparent;
 }
+
+.projectName {
+  margin: 0;
+  margin-top: -10px;
+  text-align: center;
+}
