--- a/src/components/projects/projects-overview/styles/project-thumbnail.module.css
+++ b/src/components/projects/projects-overview/styles/project-thumbnail.module.css
@@ -7,6 +7,18 @@
   overflow: auto !important;
 }
 
+.link {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.26s ease-out;
+  font-size: 1.2em;
+}
+
+.link:hover {
+  color: var(--brand-1);
+  text-decoration: underline;
+}
+
 .hide {
   background-color: transparent;
   color: transparent;
