--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,10 @@ body {
 
   --text-default: hsla(0, 0%, 100%, 0.87);
 
-  --background-one: #0a0a0a;
+  --background-1: #0a0a0a;
 
   --gray-1: gray;
   --subtle-gray: rgb(69, 69, 69);
-
-  --error-background: "red";
 }
 
 .light {
@@ -37,7 +35,10 @@ body {
   --page-secondary: rgb(255, 255, 255);
   --text-default: hsla(0, 0%, 0%, 0.87);
 
-  --background-one: rgb(232, 232, 232);
+  --background-1: rgb(232, 232, 232);
+
+  --gray-1: rgb(63, 63, 63);
+  --subtle-gray: rgb(199, 199, 199);
 }
 
 .dark,
@@ -50,5 +51,6 @@ body {
 
   /* shared light and dark colors */
   --brand-1: rgb(77, 158, 208);
+  --brand-hover: rgb(91, 178, 231);
   --shared-color: pink;
 }
