--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,23 @@ body {
   --brand-hover: rgb(91, 178, 231);
   --shared-color: pink;
 }
+
+.actionButton {
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-family: inherit;
+  box-sizing: border-box;
+  outline: none;
+  transition: all 0.1s ease-in-out;
+  background-color: var(--brand-1);
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.actionButton:hover {
+  background-color: var(--brand-hover);
+}
