--- a/src/components/projects/single-project/styles/connect-project-modal.module.css
+++ b/src/components/projects/single-project/styles/connect-project-modal.module.css
@@ -1,5 +1,5 @@
 .modal {
-  background-color: rgba(0, 0, 0, 0.414);
+  background-color: rgba(0, 0, 0, 0.45);
   width: 100%;
   height: 100vh;
 
@@ -15,7 +15,7 @@
 
 .container {
   background-color: var(--background-1);
-  width: clamp(250px, 60%, 800px);
+  width: clamp(250px, 90%, 1100px);
   margin: 0 auto;
   height: fit-content;
   border-radius: 10px;
@@ -23,4 +23,10 @@
 
 .heading {
   text-align: center;
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 100%;
+  }
 }
