--- a/src/pages/styles/single-project-page.module.css
+++ b/src/pages/styles/single-project-page.module.css
@@ -15,3 +15,27 @@
   font-size: 1em;
   display: block;
 }
+
+.connectButton {
+  background-color: transparent;
+  border: 1px solid var(--brand-1);
+  border-radius: 20px;
+  padding: 10px;
+  color: var(--text-default);
+  font-size: 1em;
+  transition: all 0.15s ease-in-out;
+}
+
+.connectButton:hover {
+  color: var(--brand-1);
+  border-color: var(--text-default);
+  cursor: pointer;
+}
+
+.bottomContainer {
+  width: clamp(240px, 60%, 450px);
+  margin: 40px auto;
+
+  display: flex;
+  justify-content: left;
+}
