Made query and related query styling more responsive and intelligent

--- a/src/components/UI/Header/styles/dark-button.module.css
+++ b/src/components/UI/Header/styles/dark-button.module.css
@@ -11,6 +11,14 @@
 .iconSun,
 .iconMoon {
   font-size: 1.8em;
+  transition: all 0.2s ease-in-out;
+}
+
+.iconSun:hover {
+  transform: rotate(-55deg);
+}
+.iconMoon:hover {
+  transform: rotate(55deg);
 }
 
 .iconSun {
