--- a/src/components/projects/projects-overview/styles/project-thumbnail.module.css
+++ b/src/components/projects/projects-overview/styles/project-thumbnail.module.css
@@ -5,12 +5,17 @@
   background-color: rgb(32, 32, 32);
 
   overflow: auto !important;
+
+  transition: all 0.18s ease-out;
+}
+
+.thumbnailContainer:hover {
+  border-color: var(--brand-1);
 }
 
 .link {
   color: inherit;
   text-decoration: none;
-  transition: all 0.26s ease-out;
   font-size: 1.2em;
 }
 
