--- a/src/components/landing/styles/simple-and-fast.module.css
+++ b/src/components/landing/styles/simple-and-fast.module.css
@@ -7,12 +7,14 @@
 .p {
   margin-top: 0;
   font-size: 1.5em;
+  text-align: center;
 }
 
 .heading {
   color: var(--brand-1);
   font-size: 2em;
   margin: 0;
+  text-align: center;
 }
 
 .subText {
@@ -20,6 +22,7 @@
   font-size: 1.2em;
   font-style: italic;
   color: var(--subtle-text);
+  text-align: center;
 }
 
 .video {
