Landing page primitive

--- a/src/components/landing/styles/privacy.module.css
+++ b/src/components/landing/styles/privacy.module.css
@@ -2,8 +2,8 @@
   text-align: center;
   width: fit-content;
   max-width: 820px;
-  margin: 0 auto;
-  margin-top: 200px;
+  margin: 40vh auto;
+  margin-bottom: 42vh;
 }
 
 .ul {
