--- a/src/components/UI/Header/styles/header.module.css
+++ b/src/components/UI/Header/styles/header.module.css
@@ -51,3 +51,11 @@
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+@media (max-width: 900px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
+}
