Mobile header bug fixes and mobile header

--- a/src/components/UI/Header/styles/header.module.css
+++ b/src/components/UI/Header/styles/header.module.css
@@ -54,6 +54,7 @@
 
 @media (max-width: 900px) {
   .header {
+    width: 80%;
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
