--- a/src/components/UI/Header/styles/mobile-header.module.css
+++ b/src/components/UI/Header/styles/mobile-header.module.css
@@ -7,6 +7,8 @@
   border: 2px solid transparent;
   color: var(--text-default);
   font-size: 3.4em;
+  width: fit-content;
+  padding: 0;
 }
 
 .hamburgerIcon {
