--- a/src/components/projects/projects-overview/styles/project-thumbnail.module.css
+++ b/src/components/projects/projects-overview/styles/project-thumbnail.module.css
@@ -37,3 +37,10 @@
   margin-top: -20px;
   text-align: center;
 }
+
+@media (max-width: 1000px) {
+  .thumbnailContainer {
+    width: 74vw;
+    max-width: 600px;
+  }
+}
