--- a/src/components/projects/single-project/styles/single-project.module.css
+++ b/src/components/projects/single-project/styles/single-project.module.css
@@ -4,3 +4,11 @@
 
   transform: translateX(10px);
 }
+
+@media (max-width: 900px) {
+  .graphContainer {
+    width: 92%;
+
+    transform: translateX(0);
+  }
+}
