Basic implementation of filter

--- a/src/components/projects/single-project/single-project-components/sort/styles/sort-data.module.css
+++ b/src/components/projects/single-project/single-project-components/sort/styles/sort-data.module.css
@@ -1,5 +1,7 @@
 .container {
   margin-top: 10px;
   border-top: 2px solid var(--subtle-gray);
-  max-height: 80vh;
+  border-bottom: 2px solid var(--subtle-gray);
+  display: flex;
+  justify-content: space-evenly;
 }
