--- a/src/components/projects/single-project/single-project-components/sort/styles/sort-select-menu.module.css
+++ b/src/components/projects/single-project/single-project-components/sort/styles/sort-select-menu.module.css
@@ -1,11 +1,31 @@
 .selectMenuContainer {
   border-left: 2px solid var(--subtle-gray);
-  margin: 8px;
+  margin: 0 8px;
+  padding-left: 4px;
   width: 100%;
   max-height: 20vh;
-  overflow-y: scroll;
+}
 
+.selectMenuContainer:first-child {
+  border-left: none;
+}
+
+.itemsContainer {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
+  max-height: 85%;
+}
+
+.categoryLabel {
+  font-size: 1em;
+  color: var(--text-default);
+}
+
+@media (max-width: 1000px) {
+  .selectMenuContainer {
+    border: none;
+    border-bottom: 2px solid var(--subtle-gray);
+  }
 }
