Checkboxes style improvements, although checkboxes are temp, will be replaced with custom items

--- a/src/components/projects/single-project/single-project-components/sort/styles/sort-item.module.css
+++ b/src/components/projects/single-project/single-project-components/sort/styles/sort-item.module.css
@@ -3,4 +3,19 @@
   min-width: fit-content;
   height: fit-content;
   color: var(--subtle-text);
+
+  font-size: 1em;
+}
+
+.checkbox {
+  background-color: green;
+  width: 1em;
+  height: 1em;
+}
+
+@media (max-width: 1000px) {
+  .checkbox,
+  .sortItemContainer {
+    font-size: 1.15em;
+  }
 }
