Tons of QOL improvments, bug fixes, edge-cases, and correct date-processing features added

--- a/src/pages/styles/single-project-page.module.css
+++ b/src/pages/styles/single-project-page.module.css
@@ -17,7 +17,7 @@
   box-sizing: border-box;
   outline: none;
   transition: all 0.2s ease-in-out;
-  max-width: 150px;
+  max-width: 260px;
 }
 
 .option {
@@ -47,5 +47,8 @@
 @media (max-width: 800px) {
   .topInfoContainer {
     width: 90%;
+  }
+  .projSelect {
+    max-width: 150px;
   }
 }
