--- a/src/components/projects/single-project/single-project-components/sort/styles/sort-select-menu.module.css
+++ b/src/components/projects/single-project/single-project-components/sort/styles/sort-select-menu.module.css
@@ -1,9 +1,8 @@
 .selectMenuContainer {
-  border-left: 2px solid var(--subtle-gray);
   margin: 0 8px;
   padding-left: 4px;
   width: 100%;
-  max-height: 20vh;
+  max-height: 40vh;
 }
 
 .selectMenuContainer:first-child {
@@ -13,8 +12,7 @@
 .itemsContainer {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   max-height: 85%;
 }
 
